# excel-helper-widget

./: .gitignore  README.md  conftest.py  excel-helper-data-expansion-v2-spec.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  icons.py  paths.py  reloader.py  result_card.py  search.py  settings.py  toast.py  tray.py  widget.py
data/: excel_functions.json
tests/: _launch_check.py  _quit_check.py  _screenshot.py  _tray_check.py  test_p2.py  test_search.py  test_tray.py  test_widget.py
